# gli_api-server

./: .dockerignore  .env.development  .env.example  .env.production  .env.staging  .gitignore  Dockerfile  Procfile  README.md  __init__.py  api_upload.py  apply_s3_bucket_policy.py  create_admin_accounts.py  create_dummy_users.py  create_project_features.py  create_shopping_data.py  create_strategy_phases.py  create_team_members.py  database_setup_commands.md  db.sqlite3  db.sqlite3.backup  eb_run.sh  fix_s3_public_access.py  local_users_dump.json  manage.py  pyproject.toml  run.sh  staging_sync.sql  stg_data_upload.py  test_api_upload.py  test_improved_system.py  test_s3_connection.py  test_s3_public_access.py  upload_to_stg.py  uv_pip_compile_requirements.txt
.github/workflows/: README.md  deploy-production.yml  deploy-staging.yml
apps/common/: models.py  s3_utils.py  serializers.py  urls.py  views.py
apps/gli_content/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/solana_auth/: admin.py  apps.py  middleware.py  models.py  permissions.py  requirements.txt  serializers.py  urls.py  views.py  views_face_verification.py
backups/: local_backup_20251016_025908.json  local_backup_20251016_044051.json  local_backup_20251016_044118.json  local_backup_20251016_143500.json  local_backup_20251020_221132.json  local_backup_20251021_214109.json  local_backup_20251101_210313.json  local_backup_20251102_001050.json
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/emails/: verification_code.html  verification_code.txt
(+38 files in other folders)
